--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,7 +14,7 @@
             android:id="@+id/search_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/search_round_rectangle"
+            android:background="@drawable/grey_round_rectangle"
             app:iconifiedByDefault="false"
             app:queryHint="Search "
             app:queryBackground="@null"
@@ -28,13 +28,15 @@
             app:layout_constraintTop_toBottomOf="@+id/search_view"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
-            android:scrollbars="horizontal" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/recyclerView"
+            android:scrollbars="horizontal" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/search_titles_recycler_view"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp" android:layout_marginTop="16dp"/>
     <androidx.recyclerview.widget.RecyclerView
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/recyclerView" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/search_titles_recycler_view" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp" android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"/>
 
