--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -32,8 +32,7 @@
             app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp" android:layout_marginTop="16dp"/>
     <androidx.recyclerview.widget.RecyclerView
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:spanCount="2"
+            android:id="@+id/images_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/search_titles_recycler_view" app:layout_constraintStart_toStartOf="parent"
