--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -5,10 +5,13 @@
              xmlns:app="http://schemas.android.com/apk/res-auto">
     <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/image"
+            android:paddingLeft="8dp"
+            android:paddingTop="8dp"
+            android:paddingRight="16dp"
             app:shapeAppearanceOverlay="@style/RoundedSquare"
-            android:layout_width="wrap_content"
+            android:layout_width="190dp"
             android:layout_height="wrap_content"
-            android:scaleType="centerCrop">
+            android:scaleType="fitXY">
 
     </com.google.android.material.imageview.ShapeableImageView>
 </FrameLayout>
