--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -28,9 +28,13 @@
             app:layout_constraintTop_toBottomOf="@+id/search_view"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
-            android:scrollbars="horizontal" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/search_titles_recycler_view"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp" android:layout_marginTop="16dp"/>
+            android:scrollbars="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/search_titles_recycler_view"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"/>
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/images_recycler_view"
             android:layout_width="match_parent"
