--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -9,7 +9,8 @@
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
         android:paddingTop="16dp"
-        android:paddingBottom="16dp">
+        android:paddingBottom="16dp"
+        android:orientation="vertical">
     <androidx.appcompat.widget.SearchView
             android:id="@+id/search_view"
             android:layout_width="match_parent"
@@ -19,28 +20,21 @@
             app:queryHint="Search "
             app:queryBackground="@null"
             app:searchIcon="@drawable/search_icon"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginStart="8dp" android:layout_marginTop="16dp"/>
-    <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            app:layout_constraintTop_toBottomOf="@+id/search_view"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            android:scrollbars="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/search_titles_recycler_view"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"/>
+
+    <include
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:id="@+id/collections_scroll_view"
+            layout="@layout/collections_view"
+    />
     <androidx.recyclerview.widget.RecyclerView
+            android:layout_marginTop="8dp"
             android:id="@+id/images_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/search_titles_recycler_view" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp" android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"/>
+    />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
