--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="radio_button_padding">8dp</dimen>
+    <dimen name="radio_button_start">8dp</dimen>
+    <dimen name="radio_button_end">8dp</dimen>
 </resources>
