--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,7 +20,8 @@
             app:queryHint="Search "
             app:queryBackground="@null"
             app:searchIcon="@drawable/search_icon"
-            android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"/>
 
     <include
