--- a/app/src/main/res/layout/details_fragment.xml
+++ b/app/src/main/res/layout/details_fragment.xml
@@ -16,7 +16,8 @@
             android:padding="8dp"
 
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="8dp" android:id="@+id/imageButton2"/>
+            android:layout_marginTop="8dp"
+            android:id="@+id/back_navigation"/>
 
     <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/image"
