--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -9,7 +9,7 @@
             android:paddingTop="8dp"
             android:paddingRight="16dp"
             app:shapeAppearanceOverlay="@style/RoundedSquare"
-            android:layout_width="190dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scaleType="fitXY"
             app:strokeColor="@null">
