--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="red">#BB1020</color>
     <color name="grey">#F3F5F9</color>
     <color name="dark_grey">#868686</color>
+    <color name="transparent_black">#CC1E1E1E</color>
 </resources>
