change DetailsFragment.kt, made DetailsViewModel. Implement save button

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -26,9 +26,8 @@
             tools:layout="@layout/fragment_notifications"/>
     <fragment android:id="@+id/detailsFragment" android:name="com.example.pexelsapp.ui.details.DetailsFragment"
               android:label="DetailsFragment">
-        <argument android:name="bitmap" app:argType="string"/>
-        <argument android:name="author_name" app:argType="string"/>
         <action android:id="@+id/action_detailsFragment_to_navigation_home" app:destination="@id/navigation_home"/>
+        <argument android:name="photo" app:argType="com.example.pexelsapp.Data.Dtos.PexelsPhotoDto"/>
     </fragment>
     <fragment android:id="@+id/navigation_bookmarks" android:name="com.example.pexelsapp.ui.Bookmarks.BookmarksFragment"
               android:label="fragment_bookmarks" tools:layout="@layout/fragment_bookmarks">
