--- a/app/src/main/res/layout/details_fragment.xml
+++ b/app/src/main/res/layout/details_fragment.xml
@@ -26,12 +26,13 @@
             android:paddingRight="16dp"
             app:shapeAppearanceOverlay="@style/RoundedSquare"
             android:layout_width="match_parent"
-            android:layout_height="500dp"
+            android:layout_height="540dp"
             app:strokeColor="@null"
             android:scaleType="centerCrop"
-            android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/details_fragment_title"
+            android:layout_marginTop="32dp"/>
     <TextView
             android:text="Name Surname"
             android:textAppearance="@style/TitleTextStyle"
@@ -52,7 +53,7 @@
             android:layout_height="48dp"
             android:background="@drawable/grey_round_rectangle"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/relativeLayout">
         <ImageButton
                 android:id="@+id/download_button"
                 android:layout_width="wrap_content"
