--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -27,7 +27,8 @@
     <fragment android:id="@+id/detailsFragment" android:name="com.example.pexelsapp.ui.details.DetailsFragment"
               android:label="DetailsFragment">
         <action android:id="@+id/action_detailsFragment_to_navigation_home" app:destination="@id/navigation_home"/>
-        <argument android:name="photo" app:argType="com.example.pexelsapp.Data.Dtos.PexelsPhotoDto"/>
+        <argument android:name="photo"
+                  app:argType="com.example.pexelsapp.Data.Dtos.PexelsPhotoDto"/>
     </fragment>
     <fragment android:id="@+id/navigation_bookmarks" android:name="com.example.pexelsapp.ui.Bookmarks.BookmarksFragment"
               android:label="fragment_bookmarks" tools:layout="@layout/fragment_bookmarks">
