problems with scaling of bookmarks_item.xml

--- a/app/src/main/res/layout/bookmarks_item.xml
+++ b/app/src/main/res/layout/bookmarks_item.xml
@@ -1,36 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/grey_round_rectangle">
+<FrameLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop= "8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_centerVertical="true"
+>
+<androidx.cardview.widget.CardView
+   android:layout_width="wrap_content"
+   android:layout_height="wrap_content"
+   app:cardCornerRadius="8dp"
+>
+<RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
         <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/bookmarks_image"
-                android:paddingLeft="8dp"
-                android:paddingTop="8dp"
-                android:paddingRight="16dp"
-                android:layout_width="wrap_content"
+                android:layout_width="167dp"
                 android:layout_height="wrap_content"
                 android:scaleType="fitXY"
-                android:src="@drawable/lion"
-                app:strokeColor="@null" app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:strokeColor="@null">
         </com.google.android.material.imageview.ShapeableImageView>
 
         <com.google.android.material.textview.MaterialTextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp"
                 android:paddingTop="4dp"
                 android:paddingBottom="4dp"
-                app:layout_constraintStart_toStartOf="parent"
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
+                android:layout_width="167dp"
+                android:layout_height="wrap_content"
                 android:id="@+id/bookmarks_author_name"
                 android:text="name surname"
+                android:layout_alignBottom="@+id/bookmarks_image"
+                android:layout_alignParentStart="true"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:background="@color/transparent_black"
-                app:layout_constraintBottom_toBottomOf="@+id/bookmarks_image"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                />
+</RelativeLayout>
+</androidx.cardview.widget.CardView>
+</FrameLayout>
+
