--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -2,15 +2,15 @@
 <FrameLayout android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto">
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+             android:paddingStart="8dp"
+             android:paddingTop="8dp"
+             android:paddingEnd="16dp">
     <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/image"
-            android:paddingLeft="8dp"
-            android:paddingTop="8dp"
-            android:paddingRight="16dp"
             app:shapeAppearanceOverlay="@style/RoundedSquare"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="167dp"
+            android:layout_height="match_parent"
             android:scaleType="fitXY"
             app:strokeColor="@null">
 
