--- a/app/src/main/res/layout/details_fragment.xml
+++ b/app/src/main/res/layout/details_fragment.xml
@@ -7,6 +7,12 @@
         tools:context="ui.details.DetailsFragment"
         android:padding="24dp">
 
+    <include
+            android:visibility="gone"
+            layout="@layout/details_explore"
+            android:id="@+id/details_explore_layout"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/details_fragment_title"/>
 
     <ImageButton
             android:layout_width="wrap_content"
