--- a/app/src/main/res/layout/bookmarks_explore_layout.xml
+++ b/app/src/main/res/layout/bookmarks_explore_layout.xml
@@ -4,6 +4,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:layout_weight="1"
 >
 
     <TextView
@@ -11,7 +12,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/bookmarks_explore_text"
             android:layout_gravity="center"
-            android:layout_marginTop="250dp"
+            android:layout_marginTop="320dp"
             android:text="you haven't saved anything yet"
             android:textColor="@color/black"
             android:textSize="16sp"
@@ -20,6 +21,7 @@
 
     />
     <TextView
+            android:id="@+id/explore"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/explore"
