add pagination dependency

--- a/app/src/main/res/layout/details_fragment.xml
+++ b/app/src/main/res/layout/details_fragment.xml
@@ -20,7 +20,7 @@
             android:src="@drawable/back_arrow"
             android:background="@drawable/back_button_background"
             android:padding="8dp"
-
+            android:foreground="?attr/selectableItemBackgroundBorderless"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="8dp"
             android:id="@+id/back_navigation"/>
