--- a/app/src/main/res/layout/details_explore.xml
+++ b/app/src/main/res/layout/details_explore.xml
@@ -22,6 +22,7 @@
 
     />
     <TextView
+            android:foreground="?attr/selectableItemBackgroundBorderless"
             android:id="@+id/explore"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
