--- a/app/src/main/res/layout/details_fragment.xml
+++ b/app/src/main/res/layout/details_fragment.xml
@@ -47,6 +47,7 @@
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"/>
     <ImageButton
+            android:foreground="?attr/selectableItemBackgroundBorderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/grey_circle_background"
@@ -62,6 +63,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:id="@+id/relativeLayout">
         <ImageButton
+                android:foreground="?attr/selectableItemBackgroundBorderless"
                 android:id="@+id/download_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
