--- a/app/src/main/res/layout/network_error_layout.xml
+++ b/app/src/main/res/layout/network_error_layout.xml
@@ -17,6 +17,7 @@
 
     />
 <TextView
+        android:foreground="?attr/selectableItemBackgroundBorderless"
         android:id="@+id/try_again"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
