todo : force pager to add items to the end. Make more appropriate way to work with remote keys

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -41,4 +41,7 @@
         <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
         <item name="postSplashScreenTheme">@style/AppTheme</item>
     </style>
+    <style name="Widget.ProgressBar.Circle" parent="Widget.AppCompat.ProgressBar">
+        <item name="color">@color/red</item>
+    </style>
 </resources>
