--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,6 +23,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"/>
+
     <include
             android:id="@+id/network_error_layout"
             layout="@layout/network_error_layout"
@@ -35,6 +36,46 @@
             android:id="@+id/collections_scroll_view"
             layout="@layout/collections_view"
     />
+    <com.facebook.shimmer.ShimmerFrameLayout
+            android:paddingTop="8dp"
+            android:id="@+id/shimmer_home_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="vertical"
+            tools:duration="800"
+            >
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:baselineAligned="false">
+            <LinearLayout
+                    android:baselineAligned="false"
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:id="@+id/first_column">
+                <include layout="@layout/image_item_first_shimmer"></include>
+                <include layout="@layout/image_item_second_shimmer"></include>
+                <include layout="@layout/image_item_first_shimmer"></include>
+
+            </LinearLayout>
+            <LinearLayout
+                    android:baselineAligned="false"
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:id="@+id/seco_column">
+                <include layout="@layout/image_item_second_shimmer"></include>
+                <include layout="@layout/image_item_first_shimmer"></include>
+                <include layout="@layout/image_item_first_shimmer"></include>
+            </LinearLayout>
+
+        </LinearLayout>
+    </com.facebook.shimmer.ShimmerFrameLayout>
     <androidx.recyclerview.widget.RecyclerView
             android:layout_marginTop="8dp"
             android:id="@+id/images_recycler_view"
