--- a/app/src/main/res/layout/bookmarks_item.xml
+++ b/app/src/main/res/layout/bookmarks_item.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.cardview.widget.CardView
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+<androidx.cardview.widget.CardView
+        android:layout_weight="1"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
@@ -11,13 +15,13 @@
         android:layout_marginBottom="8dp"
         app:cardCornerRadius="8dp">
 <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
                 android:id="@+id/bookmarks_image"
-                android:layout_width="167dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
+                android:scaleType="fitXY"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent">
@@ -28,7 +32,7 @@
                 android:paddingBottom="4dp"
                 android:paddingStart="4dp"
                 android:paddingEnd="4dp"
-                android:layout_width="167dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/bookmarks_author_name"
                 android:text="name surname"
@@ -40,4 +44,4 @@
                 />
 </RelativeLayout>
 </androidx.cardview.widget.CardView>
-
+</LinearLayout>
