--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout android:layout_width="wrap_content"
+<LinearLayout android:layout_width="match_parent"
              android:layout_height="wrap_content"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,11 +8,12 @@
              android:paddingEnd="16dp">
     <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/image"
+            android:layout_weight="1"
             app:shapeAppearanceOverlay="@style/RoundedSquare"
-            android:layout_width="167dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:scaleType="fitXY"
             app:strokeColor="@null">
 
     </com.google.android.material.imageview.ShapeableImageView>
-</FrameLayout>
+</LinearLayout>
