--- a/app/src/main/res/layout/collections_view.xml
+++ b/app/src/main/res/layout/collections_view.xml
@@ -5,6 +5,7 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content">
     <HorizontalScrollView
+            android:id = "@+id/scroll_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scrollbars="none"
