--- a/app/src/main/res/layout/fragment_bookmarks.xml
+++ b/app/src/main/res/layout/fragment_bookmarks.xml
@@ -4,7 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
-        tools:context=".ui.Bookmarks.BookmarksFragment">
+        tools:context=".ui.Fragments.BookmarksFragment">
     <include
             android:visibility="gone"
             layout="@layout/bookmarks_explore_layout"
