--- a/app/src/main/res/layout/shimmer_placeholder.xml
+++ b/app/src/main/res/layout/shimmer_placeholder.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:id="@+id/seco_column">
+            android:id="@+id/second_column">
         <include layout="@layout/image_item_second_shimmer"></include>
         <include layout="@layout/image_item_first_shimmer"></include>
         <include layout="@layout/image_item_first_shimmer"></include>
