--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,30 +7,19 @@
 
     <fragment
             android:id="@+id/navigation_home"
-            android:name="com.example.pexelsapp.ui.home.HomeFragment"
+            android:name="com.example.pexelsapp.ui.Fragments.HomeFragment"
             android:label="@string/title_home"
             tools:layout="@layout/fragment_home">
         <action android:id="@+id/action_navigation_home_to_detailsFragment" app:destination="@id/detailsFragment"/>
     </fragment>
 
-    <fragment
-            android:id="@+id/navigation_dashboard"
-            android:name="com.example.pexelsapp.ui.dashboard.DashboardFragment"
-            android:label="@string/title_dashboard"
-            tools:layout="@layout/fragment_dashboard"/>
-
-    <fragment
-            android:id="@+id/navigation_notifications"
-            android:name="com.example.pexelsapp.ui.notifications.NotificationsFragment"
-            android:label="@string/title_notifications"
-            tools:layout="@layout/fragment_notifications"/>
-    <fragment android:id="@+id/detailsFragment" android:name="com.example.pexelsapp.ui.details.DetailsFragment"
+    <fragment android:id="@+id/detailsFragment" android:name="com.example.pexelsapp.ui.Fragments.DetailsFragment"
               android:label="DetailsFragment">
         <action android:id="@+id/action_detailsFragment_to_navigation_home" app:destination="@id/navigation_home"/>
         <argument android:name="photo"
                   app:argType="com.example.pexelsapp.Data.Dtos.PexelsPhotoDto"/>
     </fragment>
-    <fragment android:id="@+id/navigation_bookmarks" android:name="com.example.pexelsapp.ui.Bookmarks.BookmarksFragment"
+    <fragment android:id="@+id/navigation_bookmarks" android:name="com.example.pexelsapp.ui.Fragments.BookmarksFragment"
               android:label="fragment_bookmarks" tools:layout="@layout/fragment_bookmarks">
         <action android:id="@+id/action_bookmarksFragment_to_detailsFragment" app:destination="@id/detailsFragment"/>
         <action android:id="@+id/action_navigation_bookmarks_to_navigation_home" app:destination="@id/navigation_home"/>
