fix refactor mistakes

--- a/app/src/main/res/layout/details_fragment.xml
+++ b/app/src/main/res/layout/details_fragment.xml
@@ -22,7 +22,8 @@
             android:background="@drawable/back_button_background"
             android:padding="8dp"
             android:foreground="?attr/selectableItemBackgroundBorderless"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="8dp"
             android:id="@+id/back_navigation"/>
 
